# run-test-in-compile-time

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
prime-checker/: CMakeLists.txt  PrimeChecker.cpp  PrimeChecker.h
prime-checker/tests/: CMakeLists.txt  PrimeChecherTests.cpp
third-parties/: CMakeLists.txt
